style.css
* {
  box-sizing: border-box;
}

/* just to center the widget */

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

/*
  WIDGET
*/

.widget {
  width: 300px;
  height: 300px;
  overflow: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-size: 12pt;
}

img {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
}

.caption, .title {
  /*flex: 0;*/
  background-color: rgba(0, 0, 0, 0.5);;
  color: white;
  z-index: 1;
  padding: 3px;
  opacity: 0;
  transition: opacity .5s ease;
}

.caption {
  max-height: 50%;
  overflow-y: scroll;
}

/* TITLE BAR & NAV */

.title {
  font-size: 15pt;
  padding: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

button {
  background-color: white;
  border: 2px solid black;
  box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 1);
  padding: 2px 8px;
}

button:hover {
  background-color: #DDD;
}

button:active {
  background-color: #BBB;
}

/* transition */

.widget:hover > .caption, .widget:hover > .title {
  opacity: 1;
}

